<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CameraFragment">

    <!-- TODO: Update blank fragment layout -->
    <androidx.camera.view.PreviewView
        android:id="@+id/viewFinder_id"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.camera.view.PreviewView>

    <Button
        android:id="@+id/capture_button"
        android:layout_width="97dp"
        android:layout_height="87dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="50dp"
        android:elevation="2dp"
        android:text="@string/take_photo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_vertical"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="Camera"
        android:gravity="center"
        android:textSize="34sp"/>

    <Button
        android:id="@+id/video_capture_button"
        android:layout_width="97dp"
        android:layout_height="87dp"
        android:layout_marginStart="50dp"
        android:layout_marginBottom="50dp"
        android:elevation="2dp"
        android:text="@string/start_capture"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_vertical" />

    <Button
        android:id="@+id/button_file"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:text="@string/btn_file_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".50" />

</androidx.constraintlayout.widget.ConstraintLayout>